# kinetics

./: .gitignore  MANIFEST.in  OxygenVacancy_HydrationAnalysis.py  README.md  clean.sh  flatmpi.o1522167  get_cif.py  hydration_test.py  pyproject.toml  run_hokudai.sh  run_tsubame.sh  test.py  tmp.md
examples/nh3_decomp/: Ni36.traj  nh3_decomp.py  opt_log.txt  test.py
examples/nh3_decomposition/: adsorbate.yaml  clean.sh  nh3decomp.py  nh3decomposition.txt  opt_log.txt  out.json  prepare_initial.py  structures.json
examples/nh3decomposition/: .gitignore  adsorbate.yaml  clean.sh  nh3decomp.py  nh3decomposition2.txt  prepare_initial.py  run_hokudai.sh  vasp.yaml
examples/oer/: README.md  adsorbate.yaml  clean.sh  electron_numbers.yaml  oer.py  oer.txt  oer2.txt  output.csv  regression.py  run_hokudai.sh  run_vasp.sh  vasp.yaml
examples/orr/: CaMn2O4_ICSD_CollCode280514.cif  ICSD_CollCode35218_CaMnO3.cif  clean.sh  opt_log.txt  orr.py
kinetics/: bandgap.py  hydration.py
kinetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kinetics/bandgap/: .gitignore  calc_bandgap.py
kinetics/diffusion/: .gitignore  POSCAR  README.md  tmp.py  train.txt  vasp_test.lmdb
kinetics/hydration/: .gitignore  POSCAR  cal_hydration.py  dummy.py  run_hokudai.sh.o5398754  vasp.out
kinetics/microkinetics/: .gitignore  get_reaction_energy.py  orr.py  orr_and_oer.py  run_hokudai.sh  tmp_17020.db  utils.py  vasp.py  vaspinput.yaml
src/kinetics/: get_cif.py  utils.py  (+1 more)
src/kinetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: clean.sh  run_tsubame.sh  test_bandgap.py  test_hydration.py
(+5053 files in other folders)
