[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetics"
version = "0.0.1"
authors = [
  {name = "Yang Long", email = "yang.l.al@m.titech.ac.jp"},
  {name = "Atsushi Ishikawa", email = "ishikawa.a.ai@m.titech.ac.jp"},
]
requires-python = "<3.13"
dependencies = [
    "ase~=3.24",
    "pymatgen==2025.1.9",
    "matgl==1.2.1",
    "pyyaml~=6.0",
    "pyqt5==5.15.11",
]

[tool.setuptools.package-data]
kinetics = ["microkinetics/data/*"]
